add new files upgrade

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -129,7 +129,7 @@ color: #2e2f42;
 
 }
 
-.loader {
+/* .loader {
   position: fixed;
   top: 50%;
   left: 50%;
@@ -176,6 +176,38 @@ color: #2e2f42;
   100% {
     transform: rotate(360deg);
   }
+} */
+
+
+.loader {
+  display: inline-grid;
+  position: fixed;
+  top: 25%;
+  left: 25%;
+  transform: translate(-25%, -25%);
+  z-index: 1000;
+}
+.loader:before,
+.loader:after {
+  content: "";
+  grid-area: 1/1;
+  height: 28px;
+  aspect-ratio: 5;
+  --c: #000 90deg,#0000 0;
+  background:
+   conic-gradient(from 135deg at top   ,var(--c)),
+   conic-gradient(from -45deg at bottom,var(--c)) 12.5% 100%;
+  background-size: 20% 50%;
+  background-repeat: repeat-x;
+  -webkit-mask: repeating-linear-gradient(90deg,#000 0 10%,#0000 0 20%);
+  clip-path: inset(0 100% 0 0);
+  animation: l15 1.5s infinite steps(6) alternate;
+}
+.loader:after {
+  scale: -1 1;
+}
+@keyframes l15{
+  to {clip-path: inset(0 -20% 0 0)}
 }
 
 #load-more {
