--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -180,11 +180,11 @@ color: #2e2f42;
 
 
 .loader {
-  display: inline-grid;
+  /* display: inline-grid; */
   position: fixed;
-  top: 25%;
-  left: 25%;
-  transform: translate(-25%, -25%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 1000;
 }
 .loader:before,
